outputs/tsp_constructive-constructive/ab-mcts-ahd/2025-09-26_00-23-35/evaluations/problem_eval-3574421116111971977_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance later, while also incorporating exploration bonuses to balance path diversity and efficiency.}
                                                                                                            ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance later, while also incorporating exploration bonuses to balance path diversity and efficiency.}
                                                                                                            ^
SyntaxError: unmatched '}'
